<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF7F50"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:background="#bdbdbd"
        >
        <Button
        	android:id="@+id/button1"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="@drawable/shape"
        	android:layout_margin="5dp"
        	android:text="@string/btn_name"
        	android:textSize="13pt"
        	android:textColor="#FFFFFF"
        	android:gravity="center"
        />
        <Button 
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_alipay_pay_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_upmp_pay_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            />
        <Button 
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_rechargpay_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:visibility="gone"
            />
        <Button 
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_wechatpg_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            />
        
        <Button 
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_wechatwap_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            />
        <Button 
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_baidu_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            />
        <Button 
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:layout_margin="5dp"
            android:text="@string/bn_qqpay_name"
            android:textSize="13pt"
            android:textColor="#FFFFFF"
            android:gravity="center"
            />
    </LinearLayout>
    
        
</LinearLayout>
